--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"msg":"","code":0,"data":{"languages":[{"language":"nl","config":"https://demo-1256171558.cos.ap-chengdu.myqcloud.com/nl.json"},{"language":"en","config":"https://demo-1256171558.cos.ap-chengdu.myqcloud.com/en.json"}],"version":"","updateType":0}}
+{"msg":"","code":0,"data":{"languages":[{"language":"nl","config":"https://demo-1256171558.cos.ap-chengdu.myqcloud.com/nl.json"},{"language":"en","config":"https://demo-1256171558.cos.ap-chengdu.myqcloud.com/en.json"}],"version":"1","updateType":0}}
